--- a/Lime/pubspec.yaml
+++ b/Lime/pubspec.yaml
@@ -1,11 +1,9 @@
-name: chatroom
+name: flutter_lime
 description: A new Flutter application.
 
 dependencies:
   flutter:
     sdk: flutter
-
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
