--- a/Lime/pubspec.yaml
+++ b/Lime/pubspec.yaml
@@ -25,6 +25,15 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+  - assets/1.png
+  - assets/2.png
+  - assets/3.jpg
+  - assets/4.png
+  - assets/5.png
+  - assets/6.png
+
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
